salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/Ascott_Credential__mdt.object-meta.xml
<CustomObject>
    <description>Ascott ASR API credentials per environment. Aes_Key_Base64__c and Sys_Token__c are Protected — encrypted at rest, not exportable via Metadata API, must be set manually in Setup.</description>
    <label>Ascott Credential</label>
    <pluralLabel>Ascott Credentials</pluralLabel>
</CustomObject>