salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/fields/Aes_Key_Base64__c.field-meta.xml
<CustomField>
    <fullName>Aes_Key_Base64__c</fullName>
    <label>AES Key (Base64)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>