salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/fields/Iv__c.field-meta.xml
<CustomField>
    <fullName>Iv__c</fullName>
    <label>IV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>