salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <label>Salt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>