salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/fields/Sys_Token__c.field-meta.xml
<CustomField>
    <fullName>Sys_Token__c</fullName>
    <label>Sys Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>