salesforce/asr/poc-api/force-app/main/default/objects/Ascott_Credential__mdt/fields/Xs_App__c.field-meta.xml
<CustomField>
    <fullName>Xs_App__c</fullName>
    <label>xs_app Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>